<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="1"
        android:title="@string/action_refresh"
        app:showAsAction="always" />
    <item
        android:icon="@drawable/ic_sort_descending_interface_symbol"
        android:orderInCategory="2"
        android:title="@string/sort_by"
        app:showAsAction="always">
        <menu>
            <group
                android:id="@+id/menu_sort_by"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_popularity"
                    android:checked="true"
                    android:title="Sort by popularity" />
                <item
                    android:id="@+id/sort_top_rated"
                    android:title="Sort by top rated" />

                <item
                    android:id="@+id/sort_favorites"
                    android:title="@string/favorites" />
            </group>
        </menu>
    </item>
</menu>