<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivityFragment"
    android:fillViewport="true"
    tools:showIn="@layout/activity_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/movie_title_background"
            android:padding="@dimen/fragment_detail_linear_layout_text_view_movie_title"
            android:textColor="#FFF"
            tools:text="@string/tool_movie_name"
            android:textSize="@dimen/movie_title_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="@dimen/fragment_detail_linear_layout_padding">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/movie_poster"
                    android:layout_width="@dimen/movie_poster_layout_width"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/poster_img_description"
                    android:scaleType="fitCenter"
                    android:src="@drawable/placeholder" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/fragment_detail_linear_layout_margin_horizontal"
                android:layout_marginLeft="@dimen/fragment_detail_linear_layout_margin_horizontal"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_text"
                    tools:text="@string/tool_release_date"
                    android:textSize="@dimen/movie_release_date_textsize" />

                <TextView
                    android:id="@+id/movie_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/movie_rating_paddingtop"
                    tools:text="@string/tool_ratings"
                    android:textColor="@color/color_text"
                    android:textSize="@dimen/movie_rating_textsize"/>

                <Button
                    android:id="@+id/button_mark_as_favorite"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/button_vertical_margin"
                    android:background="@color/colorAccent"
                    android:drawableEnd="@drawable/ic_star"
                    android:drawableRight="@drawable/ic_star"
                    android:paddingRight="@dimen/button_favorites_padding_horizontal"
                    android:paddingEnd="@dimen/button_favorites_padding_horizontal"
                    android:paddingLeft="@dimen/button_favorites_padding_horizontal"
                    android:paddingStart="@dimen/button_favorites_padding_horizontal"
                    android:text="@string/add_to_favorites"
                    android:visibility="visible" />

                <Button style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/button_remove_from_favorites"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/button_vertical_margin"
                    android:text="@string/remove_from_favorites"
                    android:background="@color/colorAccent"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/button_watch_trailer"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/button_vertical_margin"
                    android:background="@color/colorPrimaryDark"
                    android:enabled="false"
                    android:text="@string/watch_trailer" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/movie_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="@dimen/text_size_small"
            tools:text="@string/tool_overview"
            android:textColor="@color/color_text" />

        <TextView
            style="@style/TextViewAppearance.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title_trailers"/>
        <View style="@style/DividerStyle"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/trailer_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_vertical_padding"
            app:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/trailer_item" />

        <TextView
            style="@style/TextViewAppearance.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title_reviews"/>
        <View style="@style/DividerStyle"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/review_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/review_item" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
